[gd_scene load_steps=5 format=3 uid="uid://bjs1drfks6vxg"]

[ext_resource type="PackedScene" uid="uid://bnfx8su5yvqom" path="res://scenes/dish_wall/dish_wall.tscn" id="1_1un46"]
[ext_resource type="Script" uid="uid://bhwwcb635vnjp" path="res://scenes/petri_dish/petri_dish.gd" id="1_f3vbx"]
[ext_resource type="PackedScene" uid="uid://cmydkhcql7io0" path="res://scenes/algae_container/algae_container.tscn" id="3_n2ik2"]
[ext_resource type="PackedScene" uid="uid://cse11so7v7j4d" path="res://scenes/algae/algae.tscn" id="4_iwaph"]

[node name="PetriDish" type="Node2D"]
script = ExtResource("1_f3vbx")

[node name="NorthernWall" parent="." instance=ExtResource("1_1un46")]
position = Vector2(0, -320)
scale = Vector2(10, 1)

[node name="EasternWall" parent="." instance=ExtResource("1_1un46")]
position = Vector2(320, 0)
rotation = 1.5708
scale = Vector2(10, 1)

[node name="SouthernWall" parent="." instance=ExtResource("1_1un46")]
position = Vector2(0, 320)
rotation = 3.14159
scale = Vector2(10, 1)

[node name="WesternWall" parent="." instance=ExtResource("1_1un46")]
position = Vector2(-320, 0)
rotation = -1.5708
scale = Vector2(10, 1)

[node name="Areas" type="Node2D" parent="."]
position = Vector2(-288, -288)

[node name="AlgaeContainer" parent="." instance=ExtResource("3_n2ik2")]

[node name="Algae" parent="AlgaeContainer" instance=ExtResource("4_iwaph")]

[connection signal="body_entered" from="Areas/DishArea" to="Areas/DishArea" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74091" to="Areas/@Area2D@74091" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74092" to="Areas/@Area2D@74092" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74093" to="Areas/@Area2D@74093" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74094" to="Areas/@Area2D@74094" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74095" to="Areas/@Area2D@74095" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74096" to="Areas/@Area2D@74096" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74097" to="Areas/@Area2D@74097" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74098" to="Areas/@Area2D@74098" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74099" to="Areas/@Area2D@74099" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74100" to="Areas/@Area2D@74100" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74101" to="Areas/@Area2D@74101" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74102" to="Areas/@Area2D@74102" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74103" to="Areas/@Area2D@74103" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74104" to="Areas/@Area2D@74104" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74105" to="Areas/@Area2D@74105" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74106" to="Areas/@Area2D@74106" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74107" to="Areas/@Area2D@74107" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74108" to="Areas/@Area2D@74108" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74109" to="Areas/@Area2D@74109" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74110" to="Areas/@Area2D@74110" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74111" to="Areas/@Area2D@74111" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74112" to="Areas/@Area2D@74112" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74113" to="Areas/@Area2D@74113" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74114" to="Areas/@Area2D@74114" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74115" to="Areas/@Area2D@74115" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74116" to="Areas/@Area2D@74116" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74117" to="Areas/@Area2D@74117" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74118" to="Areas/@Area2D@74118" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74119" to="Areas/@Area2D@74119" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74120" to="Areas/@Area2D@74120" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74121" to="Areas/@Area2D@74121" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74122" to="Areas/@Area2D@74122" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74123" to="Areas/@Area2D@74123" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74124" to="Areas/@Area2D@74124" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74125" to="Areas/@Area2D@74125" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74126" to="Areas/@Area2D@74126" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74127" to="Areas/@Area2D@74127" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74128" to="Areas/@Area2D@74128" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74129" to="Areas/@Area2D@74129" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74130" to="Areas/@Area2D@74130" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74131" to="Areas/@Area2D@74131" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74132" to="Areas/@Area2D@74132" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74133" to="Areas/@Area2D@74133" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74134" to="Areas/@Area2D@74134" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74135" to="Areas/@Area2D@74135" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74136" to="Areas/@Area2D@74136" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74137" to="Areas/@Area2D@74137" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74138" to="Areas/@Area2D@74138" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74139" to="Areas/@Area2D@74139" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74140" to="Areas/@Area2D@74140" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74141" to="Areas/@Area2D@74141" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74142" to="Areas/@Area2D@74142" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74143" to="Areas/@Area2D@74143" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74144" to="Areas/@Area2D@74144" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74145" to="Areas/@Area2D@74145" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74146" to="Areas/@Area2D@74146" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74147" to="Areas/@Area2D@74147" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74148" to="Areas/@Area2D@74148" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74149" to="Areas/@Area2D@74149" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74150" to="Areas/@Area2D@74150" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74151" to="Areas/@Area2D@74151" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74152" to="Areas/@Area2D@74152" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74153" to="Areas/@Area2D@74153" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74154" to="Areas/@Area2D@74154" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74155" to="Areas/@Area2D@74155" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74156" to="Areas/@Area2D@74156" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74157" to="Areas/@Area2D@74157" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74158" to="Areas/@Area2D@74158" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74159" to="Areas/@Area2D@74159" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74160" to="Areas/@Area2D@74160" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74161" to="Areas/@Area2D@74161" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74162" to="Areas/@Area2D@74162" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74163" to="Areas/@Area2D@74163" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74164" to="Areas/@Area2D@74164" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74165" to="Areas/@Area2D@74165" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74166" to="Areas/@Area2D@74166" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74167" to="Areas/@Area2D@74167" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74168" to="Areas/@Area2D@74168" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74169" to="Areas/@Area2D@74169" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74170" to="Areas/@Area2D@74170" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74171" to="Areas/@Area2D@74171" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74172" to="Areas/@Area2D@74172" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74173" to="Areas/@Area2D@74173" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74174" to="Areas/@Area2D@74174" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74175" to="Areas/@Area2D@74175" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74176" to="Areas/@Area2D@74176" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74177" to="Areas/@Area2D@74177" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74178" to="Areas/@Area2D@74178" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74179" to="Areas/@Area2D@74179" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74180" to="Areas/@Area2D@74180" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74181" to="Areas/@Area2D@74181" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74182" to="Areas/@Area2D@74182" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74183" to="Areas/@Area2D@74183" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74184" to="Areas/@Area2D@74184" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74185" to="Areas/@Area2D@74185" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74186" to="Areas/@Area2D@74186" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74187" to="Areas/@Area2D@74187" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74188" to="Areas/@Area2D@74188" method="_on_body_entered"]
[connection signal="body_entered" from="Areas/@Area2D@74189" to="Areas/@Area2D@74189" method="_on_body_entered"]
